--- a/example_programs/websocket_example/Makefile
+++ b/example_programs/websocket_example/Makefile
@@ -19,7 +19,7 @@ EXAMPLE_INCLUDE=../include
 CFLAGS+=-c -Wall -I$(ULFIUS_INCLUDE) -I$(EXAMPLE_INCLUDE) -I$(STATIC_FILE_LOCATION) -I$(STATIC_COMPRESSED_INMEMORY_WEBSITE) $(ADDITIONALFLAGS) $(CPPFLAGS)
 STATIC_FILE_LOCATION=../../example_callbacks/static_file
 STATIC_COMPRESSED_INMEMORY_WEBSITE=../../example_callbacks/static_compressed_inmemory_website
-LIBS=-lc -lz -lpthread -ljansson -lulfius -lorcania -L$(ULFIUS_LOCATION)
+LIBS=-lc -lz -lpthread -ljansson -lulfius -lorcania -L$(ULFIUS_LOCATION) -lsystemd
 LIBULFIUS=../../src/libulfius.so
 #SECUREFLAG=-https test.key test.pem
 
@@ -27,7 +27,7 @@ ifndef YDERFLAG
 LIBS+= -lyder
 endif
 
-all: websocket_server websocket_client
+all: websocket_server websocket_client crash_messages
 
 clean:
 	rm -f *.o websocket_server websocket_client valgrind_server.txt valgrind_client.txt
@@ -48,6 +48,10 @@ static_compressed_inmemory_website_callback.o: $(STATIC_COMPRESSED_INMEMORY_WEBS
 websocket_server: $(LIBULFIUS) static_compressed_inmemory_website_callback.o websocket_server.c
 	$(CC) $(CFLAGS) websocket_server.c
 	$(CC) -o websocket_server websocket_server.o static_compressed_inmemory_website_callback.o $(LIBS)
+
+crash_messages: $(LIBULFIUS) crash_messages.c
+	$(CC) $(CFLAGS) crash_messages.c
+	$(CC) -o crash_messages crash_messages.o $(LIBS)
 
 websocket_client: $(LIBULFIUS) websocket_client.c
 	$(CC) $(CFLAGS) websocket_client.c 
